# react-agent-python

./: .env.example  .gitignore  DECISIONS.md  README.md  agent.py  pyproject.toml
docs/: 00_initial_task.md  01_implementation_plan.md  02_production_observability_and_quality.md
scripts/: check_quality_gates.py
src/agent/: config.py  llm_client.py  logging_config.py  loop.py  metrics.py  quality_gates.py  telemetry.py  tracing.py
src/cli/: interface.py
src/mock_services/: base.py  calendar_service.py  email_service.py  jira_service.py  persistence.py  slack_service.py
src/tools/: base.py  calendar.py  email.py  jira.py  models.py  registry.py  slack.py
tests/: conftest.py
tests/golden/: test_golden_suite.py
tests/integration/: test_mock_services.py  test_scenarios.py
tests/unit/: test_calendar_tools.py  test_email_tools.py  test_jira_tools.py  test_llm_client.py  test_logging_config.py  test_loop.py  test_metrics.py  test_quality_gates.py  test_registry.py  test_slack_tools.py  test_tracing.py
